--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -4,6 +4,7 @@
 	<title>Reddit Scraper</title>
 	<link rel="stylesheet" href="/css/bootstrap.css" />
 	<link rel="stylesheet" href="/css/style.css" />
+	<link rel="stylesheet" href="/css/animate.css" />
 	<script src="/js/jquery-3.3.1.min.js"></script>
 	<script src="/js/bootstrap.js"></script>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -42,9 +43,9 @@
 			</div>
 		</div>
 
-		<footer class="footer">
+{{!-- 		<footer class="footer">
 			<p>&copy; 2018 Login App</p>
-		</footer>
+		</footer> --}}
 
 	</div> <!-- /container -->
 </body>
